--- a/src/common/font.css
+++ b/src/common/font.css
@@ -4,3 +4,9 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face{
+    font-family: "Lifehack";
+    src: url(./DearType\ -\ Lifehack\ Basic.otf);
+    font-weight: normal;
+    font-style: normal;
+}
